
============================================================

PyKota NEWS :

    - 1.03alpha :
    
        - IMPORTANT : DataBase schema has changed.
          DON'T TRY TO UPGRADE AN EXISTING PYKOTA INSTALLATION !
          The upgrade script will be finalized ASAP, be patient,
          or drop your old quota database to start anew.
          
        - The installation script now allows to install the sample
          configuration file during first installation.
          
        - More group quota code works, but still not finished.  
        
        - The CGI script displays a link to PyKota's website.
        
        - The job history is now kept, this will allow per-period
          reports in the future.
          
        - After having modified the quota for an user with edpykota,
          a quota check is done to eventually warn the user/admin about
          a quota which is too low to print.
          
        - A workaround is provided for HP Printers : their internal
          page counter is only saved to NVRAM in a 10 increment, so
          if you switch them off and then on, the reported page counter
          may be lower than the real number of pages printed.
          See http://web.mit.edu/source/third/lprng/doc/LPRng-HOWTO-15.html
          We unconditionnally set the last job's page count to 
          abs(int((10 - abs(lastcounter(snmp) - lastcounter(storage)) / 2))
          in this case. 
          For a more accurate accounting, never switch your HP printers
          off.
          
        - A fix is provided for printers which only have a volatile  
          page counter (reset to 0 every time you switch the printer on)
          This should allow PyKota to work reasonably fine with HP Laserjet
          4L/5L/6L, not perfect, but better than nothing.
          See http://web.mit.edu/source/third/lprng/doc/LPRng-HOWTO-15.html
          For a more accurate accounting, never switch your HP printers
          off.
          